--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>Единство народов России · Конкурс</title>
     <style>
-        /* ===== СБРОС И ПЕРЕМЕННЫЕ ===== */
         * {
             margin: 0;
             padding: 0;
@@ -55,7 +54,6 @@
             width: 100%;
         }
 
-        /* ===== КАСТОМНЫЙ СКРОЛЛ ===== */
         ::-webkit-scrollbar {
             width: 12px;
         }
@@ -72,7 +70,6 @@
             background: var(--primary-dark);
         }
 
-        /* ===== ШАПКА С ГРАДИЕНТОМ И СТЕКЛОМ ===== */
         .header {
             background: linear-gradient(135deg, #1a3a4a 0%, #1e4a5a 40%, #2a5f6e 100%);
             color: white;
@@ -166,7 +163,6 @@
             letter-spacing: 1px;
         }
 
-        /* ===== СТЕКЛЯННАЯ НАВИГАЦИЯ ===== */
         .nav_menu {
             display: flex;
             gap: 0.5rem;
@@ -218,7 +214,6 @@
             color: #1a3a4a;
         }
 
-        /* ===== ЗАГОЛОВКИ С ЭЛЕГАНТНЫМ АКЦЕНТОМ ===== */
         .section_title {
             font-size: 2.2rem;
             font-weight: 700;
@@ -253,7 +248,6 @@
             opacity: 0.5;
         }
 
-        /* ===== КАРТОЧКИ НАРОДОВ — СОВРЕМЕННЫЙ ДИЗАЙН ===== */
         .peoples_grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -335,7 +329,6 @@
             line-height: 1.6;
         }
 
-        /* ===== ДЕКОРАТИВНЫЙ РАЗДЕЛИТЕЛЬ ===== */
         .unity_divider {
             display: flex;
             justify-content: center;
@@ -366,7 +359,6 @@
             50% { opacity: 1; transform: scale(1.1); }
         }
 
-        /* ===== КАРТА ДРУЖБЫ — КРАСИВЫЙ БЛОК ===== */
         .map_reference {
             background: linear-gradient(145deg, #fff5e6, #fffaf2);
             border-radius: 48px 48px 48px 16px;
@@ -427,7 +419,6 @@
             box-shadow: 0 15px 30px rgba(212, 163, 115, 0.3);
         }
 
-        /* ===== ЦИТАТА С УНИКАЛЬНОЙ ФОРМОЙ ===== */
         .unity_quote {
             font-size: 1.5rem;
             color: var(--primary-dark);
@@ -453,7 +444,6 @@
             font-family: Georgia, serif;
         }
 
-        /* ===== ГАЛЕРЕЯ КОНКУРСНЫХ РАБОТ ===== */
         .contest_gallery {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -519,7 +509,6 @@
             margin-bottom: 0.4rem;
         }
 
-        /* ===== БЛОК О КОНКУРСЕ ===== */
         .contest-block {
             background: linear-gradient(145deg, #fff3e9, #ffeede);
             border-radius: 60px;
@@ -553,7 +542,6 @@
             transform: scale(1.05);
         }
 
-        /* ===== ТРАДИЦИИ — ЧИПСЫ ===== */
         .traditions {
             display: flex;
             gap: 1rem;
@@ -586,7 +574,6 @@
             transform: translateY(-3px);
         }
 
-        /* ===== ФУТЕР ===== */
         .footer {
             background: linear-gradient(145deg, #1e3a47, #1a303a);
             color: #dfd9c7;
@@ -647,7 +634,6 @@
             z-index: 2;
         }
 
-        /* ===== АДАПТАЦИЯ ===== */
         @media (max-width: 1023px) {
             .container {
                 padding: 1.5rem;
@@ -722,7 +708,6 @@
             }
         }
 
-        /* Дополнительные штрихи */
         hr {
             border: none;
             height: 2px;
@@ -871,17 +856,12 @@
         <div class="container">
             <div style="display:flex; flex-direction: column; gap: 0.5rem;">
                 <span style="font-size: 1.6rem; font-weight: 700; color: #ffddaa; letter-spacing: 1px;">Единство народов России</span>
-                <span>© 2025 · Конкурс веб-дизайна</span>
-                <span style="font-size: 0.9rem; opacity: 0.9;">Все ссылки относительные, имена файлов только latin_1_2</span>
+                <span>© 2025 · By mouvi</span>
             </div>
             <div class="footer_links">
-                <a href="sitemap.html">Карта сайта</a>
-                <a href="feedback.html">Обратная связь</a>
-                <a href="policy.html">Политика</a>
             </div>
         </div>
         <div class="footer-bottom">
-            ⚡ Сайт разработан в строгом соответствии с условиями конкурса: один корневой каталог, относительные пути, поддержка 1024*768, смартфонов, планшетов. Имена файлов — латиница, подчеркивания. Ни одной абсолютной ссылки!
         </div>
     </footer>
 </body>
