--- a/index.html
+++ b/index.html
@@ -816,37 +816,6 @@
             <div class="unity_quote">
                 «Сила России — в единстве и согласии её народов. Мы разные, но мы вместе».
             </div>
-
-            <h2 class="section_title">Конкурсные проекты</h2>
-            <div class="contest_gallery">
-                <div class="gallery_item">
-                    <a href="proekt_1_ural.html">
-                        <div class="gallery_emoji">⛩️</div>
-                        <h4>Урал многоликий</h4>
-                        <p style="color: var(--text-muted);">Башкиры, татары, русские</p>
-                    </a>
-                </div>
-                <div class="gallery_item">
-                    <a href="proekt_2_kavkaz.html">
-                        <div class="gallery_emoji">🏞️</div>
-                        <h4>Кавказский венок</h4>
-                        <p style="color: var(--text-muted);">Чечня, Дагестан, Осетия</p>
-                    </a>
-                </div>
-                <div class="gallery_item">
-                    <a href="proekt_3_siberia.html">
-                        <div class="gallery_emoji">🌲</div>
-                        <h4>Сибирь – общий дом</h4>
-                        <p style="color: var(--text-muted);">Якуты, буряты, эвенки</p>
-                    </a>
-                </div>
-                <div class="gallery_item">
-                    <a href="proekt_4_povolzhye.html">
-                        <div class="gallery_emoji">🌾</div>
-                        <h4>Поволжье: вместе</h4>
-                        <p style="color: var(--text-muted);">Мордва, чуваши, мари</p>
-                    </a>
-                </div>
             </div>
           </div>
       </div>
@@ -859,6 +828,10 @@
                 <span>© 2025 · By mouvi</span>
             </div>
             <div class="footer_links">
+            </div>
+            <div class="footer_links">
+                <a href="sitemap.html">Карта сайта</a>
+                <a href="https://t.me/Mouvi888">Обратная связь</a>
             </div>
         </div>
         <div class="footer-bottom">
