--- a/index.html
+++ b/index.html
@@ -790,12 +790,21 @@
                     <p>Курай, медовый край, дружба и трудолюбие.</p>
                 </div>
                 <div class="card">
-                    <div class="card_emoji">🦌</div>
+                    <div class="card_emoji">🏕️</div>
                     <h3>Чукчи</h3>
                     <p>Тундра, нарты, бережное отношение к природе.</p>
+                    <div class="card">
+                    <div class="card_emoji">🎪</div>
+                    <h3>Тувинцы</h3>
+                    <p>Кочевники, горловое пение, буддизм, шаманизм, юрта, степь.</p>
+                        <div class="card">
+                    <div class="card_emoji">🦌</div>
+                    <h3>Ненцы</h3>
+                    <p>Ямал, олени, чум, мороз, тундра, кочевье.</p>
                 </div>
             </div>
-            
+        </div>
+    </div> 
             <div class="unity_divider">
                 <span class="line_ornament">☭</span>
                 <span style="font-size: 2rem;">🤝</span>
