--- a/index.html
+++ b/index.html
@@ -793,10 +793,12 @@
                     <div class="card_emoji">🏕️</div>
                     <h3>Чукчи</h3>
                     <p>Тундра, нарты, бережное отношение к природе.</p>
+                </div>  
                     <div class="card">
                     <div class="card_emoji">🎪</div>
                     <h3>Тувинцы</h3>
                     <p>Кочевники, горловое пение, буддизм, шаманизм, юрта, степь.</p>
+                 </div>
                         <div class="card">
                     <div class="card_emoji">🦌</div>
                     <h3>Ненцы</h3>
