--- a/index.html
+++ b/index.html
@@ -783,12 +783,12 @@
                     <p>Холодное сияние, эпос Олонхо, алмазный край.</p>
                 </div>
                 <div class="card">
-                    <div class="card_emoji">🪕</div>
+                    <div class="card_emoji">🍯</div>
                     <h3>Башкиры</h3>
                     <p>Курай, медовый край, дружба и трудолюбие.</p>
                 </div>
                 <div class="card">
-                    <div class="card_emoji">🏕️</div>
+                    <div class="card_emoji">🥶</div>
                     <h3>Чукчи</h3>
                     <p>Тундра, нарты, бережное отношение к природе.</p>
                 </div>  
