--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                 </div>
             </div>
             <nav class="nav_menu">
-                <a href="#karta_druzhby" class="nav_link">Карта дружбы</a>
+                <a href="map.html" class="nav_link">Интерактивная карта России</a>
                 <a href="galereya.html" class="nav_link">Галерея</a>
             </nav>
         </div>
