--- a/index.html
+++ b/index.html
@@ -797,30 +797,29 @@
                         <div class="card">
                     <div class="card_emoji">🦌</div>
                     <h3>Ненцы</h3>
-                    <p>Ямал, олени, чум, мороз, тундра, кочевье.</p>
+                    <p>Ямальский п-ов, олени, чум, мороз, тундра, кочевье.</p>
                 </div>
             </div>
         </div>
     </div> 
             <div class="unity_divider">
-                <span class="line_ornament">☭</span>
-                <span style="font-size: 2rem;">🤝</span>
-                <span style="font-size: 2.2rem; color: var(--accent);">☀️</span>
-                <span style="font-size: 2rem;">🤝</span>
-                <span class="line_ornament">☭</span>
+                <span class="line_ornament">🪆</span>
+                <span style="font-size: 2.2rem; color: var(--accent);">🐻</span>
+                <span class="line_ornament">🪆</span>
             </div>
 
             <div id="karta_druzhby" class="map_reference">
                 <div class="map_text">
-                    <h3>🗺️ Карта «Единство в регионах»</h3>
+                    <h3>🗺️ Интерактивная карта России</h3>
                     <p style="font-size:1.2rem; margin-bottom: 0.8rem;">От Калининграда до Камчатки — более 190 народов. Каждый сохраняет свой язык, но все мы — россияне.</p>
-                    <p style="font-size:1rem; opacity:0.9;">Перейти к интерактивной карте проектов конкурсантов.</p>
+                    <p style="font-size:1rem; opacity:0.9;">Перейти к интерактивной карте.</p>
                 </div>
-                <a href="karta_edinstvo.html" class="map_button">Исследовать карту</a>
+                <a href="karta_edinstvo.html" class="map_button">Интерактивная карта</a>
             </div>
 
             <div class="unity_quote">
-                «Сила России — в единстве и согласии её народов. Мы разные, но мы вместе».
+                «<strong>Любовь к своему народу должна быть творческой любовью, творческим инстинктом. И менее всего она означает вражду и ненависть к другим народам</strong>»
+                © И. А. Ильин
             </div>
             </div>
           </div>
@@ -831,12 +830,12 @@
         <div class="container">
             <div style="display:flex; flex-direction: column; gap: 0.5rem;">
                 <span style="font-size: 1.6rem; font-weight: 700; color: #ffddaa; letter-spacing: 1px;">Единство народов России</span>
-                <span>© 2025 · By mouvi</span>
+                <span>© 2026 · By mouvi</span>
             </div>
             <div class="footer_links">
             </div>
             <div class="footer_links">
-                <a href="sitemap.html">Карта сайта</a>
+                <a href="map.html">Интерактивная карта</a>
                 <a href="https://t.me/Mouvi888">Обратная связь</a>
             </div>
         </div>
