--- a/map.html
+++ b/map.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+https://konyakov.ru/pubs/rr/#<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="utf-8">
@@ -219,10 +219,10 @@
             letter-spacing: 1px;
         }
 
-        /* ===== КОНТЕЙНЕР ДЛЯ ИНТЕРАКТИВНОЙ КАРТЫ ===== */
+    
         .map_container {
             background: linear-gradient(145deg, #d4e4e0, #c2d5d0);
-            border-radius: 48px;
+            border-radius: 32px;
             padding: 2rem;
             margin-bottom: 3rem;
             box-shadow: var(--shadow-lg);
@@ -243,7 +243,6 @@
             box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
         }
 
-        /* Стили для интерактивной карты */
         .map {
             width: 100%;
             height: auto;
@@ -280,7 +279,7 @@
             box-shadow: 0 0 0 8px rgba(212, 163, 115, 0.2);
         }
 
-        /* Эффект блика */
+        
         .map_wrapper::before {
             content: "";
             position: absolute;
@@ -324,7 +323,6 @@
             backdrop-filter: blur(5px);
         }
 
-        /* Легенда карты */
         .map_legend {
             display: flex;
             flex-wrap: wrap;
@@ -357,7 +355,6 @@
         .legend_color.siberia { background: #7fa5b0; }
         .legend_color.fareast { background: #9b9f7e; }
 
-        /* ===== ФИЛЬТРЫ ===== */
         .filters {
             display: flex;
             flex-wrap: wrap;
