--- a/map.html
+++ b/map.html
@@ -241,6 +241,9 @@ https://konyakov.ru/pubs/rr/#<!DOCTYPE html>
             transition: var(--transition);
             background: #ffffff;
             box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
+            width: 900px;  
+            max-width: 900px;
+            margin: 0 auto;
         }
 
         .map {
