--- a/map.html
+++ b/map.html
@@ -810,35 +810,7 @@
                 </div>
                 
                 <div class="map_legend">
-                    <div class="legend_item">
-                        <div class="legend_color central"></div>
-                        <span>Центральный</span>
-                    </div>
-                    <div class="legend_item">
-                        <div class="legend_color northwest"></div>
-                        <span>Северо-Западный</span>
-                    </div>
-                    <div class="legend_item">
-                        <div class="legend_color south"></div>
-                        <span>Южный / Кавказ</span>
-                    </div>
-                    <div class="legend_item">
-                        <div class="legend_color volga"></div>
-                        <span>Приволжский</span>
-                    </div>
-                    <div class="legend_item">
-                        <div class="legend_color ural"></div>
-                        <span>Уральский</span>
-                    </div>
-                    <div class="legend_item">
-                        <div class="legend_color siberia"></div>
-                        <span>Сибирский</span>
-                    </div>
-                    <div class="legend_item">
-                        <div class="legend_color fareast"></div>
-                        <span>Дальневосточный</span>
-                    </div>
-                </div>
+                <strong>Широкий простор для мечты и для жизни, грядущие нам открывают года.</strong>
             </div>
 
             
@@ -980,7 +952,7 @@
                     "От южных морей до полярного края, раскинулись наши леса и поля..."
                 </div>
                 <div class="quote_author">
-                    — Карта дружбы народов России
+                    — С. В. Михалков.
                 </div>
             </div>
         </div>
