--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/png" href="197408-no.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
-    <title>Карта субъектов · Интерактивная карта России</title>
+    <title>Интерактивная карта России</title>
     <script type="text/javascript" src="https://konyakov.ru/pubs/rr/jquery.min.js"></script>
     <script type="text/javascript" src="https://konyakov.ru/pubs/rr/script.js"></script>
     <script type="text/javascript" src="https://konyakov.ru/pubs/rr/tooltip.js"></script>
