--- a/map.html
+++ b/map.html
@@ -795,7 +795,8 @@ body {
                 </div>
                 <div class="map_stats">
                     <div class="stat_item">
-                        <div class="stat_number">Более 190</div>
+                        <div class="stat_label">Более</div>
+                        <div class="stat_number">190</div>
                         <div class="stat_label">народов</div>
                     </div>
                     <div class="stat_item">
