--- a/map.html
+++ b/map.html
@@ -800,8 +800,10 @@ body {
                         <div class="stat_label">народов</div>
                     </div>
                     <div class="stat_item">
+                        <div class="stat_label">От Калининграда</div>
                         <div class="stat_number">89</div>
                         <div class="stat_label">регионов</div>
+                        <div class="stat_label">до Чукотки</div>
                     </div>
                 </div>
             </div>
