--- a/galereya.html
+++ b/galereya.html
@@ -770,7 +770,7 @@
             <div class="footer_links">
                 <a href="index.html">Главная</a>
                 <a href="karta.html">Карта</a>
-                <span href="https://t.me/Mouvi888">anashina.com</span>
+                <a href="https://t.me/Mouvi888">Обратная связь</a>
             </div>
         </div>
         <div class="footer_bottom">
@@ -778,16 +778,5 @@
         </div>
     </footer>
 
-    <script>
-        // Фильтры (демонстрация)
-        const filterBtns = document.querySelectorAll('.filter_btn');
-        filterBtns.forEach(btn => {
-            btn.addEventListener('click', function() {
-                filterBtns.forEach(b => b.classList.remove('active'));
-                this.classList.add('active');
-                // Здесь будет логика фильтрации при добавлении реальных фото
-            });
-        });
-    </script>
 </body>
 </html>
